--- a/VikingSim/VikingSim.vbproj
+++ b/VikingSim/VikingSim.vbproj
@@ -86,6 +86,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="ResourceDict.vb" />
     <Compile Include="Person\Person.vb" />
     <Compile Include="Person\Skill.vb" />
     <Compile Include="Person\WeaponTypes.vb" />
