Split Workplace into Producer and Projector
Renamed NaturalResources to SettlementLocation for futureproofing, in
the event that some other building consumes a location when built.
Starting a project now causes the location to become consumed.

--- a/VikingSim/VikingSim.vbproj
+++ b/VikingSim/VikingSim.vbproj
@@ -92,6 +92,7 @@
     <Compile Include="Person\WeaponTypes.vb" />
     <Compile Include="Common.vb" />
     <Compile Include="Settlement\Buildings\Building.vb" />
+    <Compile Include="Settlement\SettlementLocation.vb" />
     <Compile Include="Settlement\Projects\BuildingProject.vb" />
     <Compile Include="Settlement\Buildings\House.vb" />
     <Compile Include="Settlement\Buildings\Workplace.vb" />
