--- a/VikingSim/VikingSim.vbproj
+++ b/VikingSim/VikingSim.vbproj
@@ -69,9 +69,9 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CalendarDate.vb" />
-    <Compile Include="IO.vb" />
-    <Compile Include="Menu.vb" />
+    <Compile Include="Trackers\CalendarDate.vb" />
+    <Compile Include="Dev\IO.vb" />
+    <Compile Include="Dev\Menu.vb" />
     <Compile Include="Module1.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
@@ -88,11 +88,11 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="ResourceDict.vb" />
+    <Compile Include="Trackers\ResourceDict.vb" />
     <Compile Include="Person\Person.vb" />
     <Compile Include="Person\Skill.vb" />
     <Compile Include="Person\WeaponTypes.vb" />
-    <Compile Include="Common.vb" />
+    <Compile Include="Dev\Common.vb" />
     <Compile Include="Settlement\Buildings\Building.vb" />
     <Compile Include="Settlement\iHistorable.vb" />
     <Compile Include="Settlement\Inventory.vb" />
