--- a/VikingSim/VikingSim.vbproj
+++ b/VikingSim/VikingSim.vbproj
@@ -69,6 +69,8 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Settlement\Item.vb" />
+    <Compile Include="Settlement\Projects\ItemProject.vb" />
     <Compile Include="Trackers\CalendarDate.vb" />
     <Compile Include="Dev\IO.vb" />
     <Compile Include="Dev\Menu.vb" />
@@ -94,7 +96,7 @@
     <Compile Include="Person\WeaponTypes.vb" />
     <Compile Include="Dev\Common.vb" />
     <Compile Include="Settlement\Buildings\Building.vb" />
-    <Compile Include="Settlement\iHistorable.vb" />
+    <Compile Include="Trackers\iHistorable.vb" />
     <Compile Include="Settlement\Inventory.vb" />
     <Compile Include="Settlement\SettlementLocation.vb" />
     <Compile Include="Settlement\Projects\BuildingProject.vb" />
