--- a/VikingSim/VikingSim.vbproj
+++ b/VikingSim/VikingSim.vbproj
@@ -70,6 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Person\Pregnancy.vb" />
+    <Compile Include="Settlement\Buildings\Storage.vb" />
     <Compile Include="Trackers\Inventory\Item.vb" />
     <Compile Include="Settlement\Projects\ItemProject.vb" />
     <Compile Include="Trackers\CalendarDate.vb" />
