--- a/VikingSim/VikingSim.vbproj
+++ b/VikingSim/VikingSim.vbproj
@@ -100,12 +100,12 @@
     <Compile Include="Settlement\Buildings\Building.vb" />
     <Compile Include="Trackers\iHistorable.vb" />
     <Compile Include="Trackers\Inventory\Inventory.vb" />
-    <Compile Include="Settlement\SettlementLocation.vb" />
+    <Compile Include="Settlement\Location\SettlementLocation.vb" />
     <Compile Include="Settlement\Projects\BuildingProject.vb" />
     <Compile Include="Settlement\Buildings\House.vb" />
     <Compile Include="Settlement\Buildings\Workplace.vb" />
     <Compile Include="Settlement\Buildings\WorkplaceProjector.vb" />
-    <Compile Include="Settlement\NaturalResources.vb" />
+    <Compile Include="Settlement\Location\NaturalResources.vb" />
     <Compile Include="Settlement\Projects\Project.vb" />
     <Compile Include="Settlement\Settlement.vb" />
     <Compile Include="Settlement\SettlementSite.vb" />
