Split Items into Gear and Furniture
Also streamlined searches for BuildingProject.Import

--- a/VikingSim/VikingSim.vbproj
+++ b/VikingSim/VikingSim.vbproj
@@ -71,6 +71,8 @@
   <ItemGroup>
     <Compile Include="Person\Pregnancy.vb" />
     <Compile Include="Settlement\Buildings\Storage.vb" />
+    <Compile Include="Trackers\Inventory\Furniture.vb" />
+    <Compile Include="Trackers\Inventory\Gear.vb" />
     <Compile Include="Trackers\Inventory\Item.vb" />
     <Compile Include="Settlement\Projects\ItemProject.vb" />
     <Compile Include="Trackers\CalendarDate.vb" />
