--- a/VikingSim/VikingSim.vbproj
+++ b/VikingSim/VikingSim.vbproj
@@ -72,6 +72,7 @@
     <Compile Include="Alert.vb" />
     <Compile Include="Person\Pregnancy.vb" />
     <Compile Include="Settlement\Buildings\Storage.vb" />
+    <Compile Include="Settlement\iMapLocation.vb" />
     <Compile Include="Trackers\Inventory\Furniture.vb" />
     <Compile Include="Trackers\Inventory\Gear.vb" />
     <Compile Include="Trackers\Inventory\Item.vb" />
