--- a/VikingSim/VikingSim.vbproj
+++ b/VikingSim/VikingSim.vbproj
@@ -71,6 +71,7 @@
   <ItemGroup>
     <Compile Include="Alert.vb" />
     <Compile Include="Person\Pregnancy.vb" />
+    <Compile Include="Person\Sex.vb" />
     <Compile Include="Settlement\Buildings\Storage.vb" />
     <Compile Include="Settlement\iMapLocation.vb" />
     <Compile Include="Trackers\Inventory\Furniture.vb" />
