Added more save/load framework

--- a/VikingSim/VikingSim.vbproj
+++ b/VikingSim/VikingSim.vbproj
@@ -78,6 +78,7 @@
     <Compile Include="Settlement\Buildings\Storage.vb" />
     <Compile Include="Settlement\Buildings\WorkplacePost.vb" />
     <Compile Include="Settlement\iMapLocation.vb" />
+    <Compile Include="Settlement\iSaveable.vb" />
     <Compile Include="Settlement\TradeOutpost.vb" />
     <Compile Include="Trackers\Inventory\Furniture.vb" />
     <Compile Include="Trackers\Inventory\Gear.vb" />
